fixed spacing so that on the top will have 100px of space and bottom has 200px of space. Also fixed spacing issues in the Projects, Landing, and Contact sections

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,5 +1,16 @@
+#landing
+{
+    margin-top: 100px;
+    font-family: 'Montserrat', sans-serif;
+	color:#dea5a4;
+     text-align: center;
+     margin-bottom: 200px;
+     margin-right: 300px;
+     margin-left: 300px;
+     
+}
+
 .hello{
-    margin-left:60px !important;
     text-align: center;
 	font-size: 5rem;
 	font-family: 'Montserrat', sans-serif;
@@ -8,7 +19,7 @@
 
 #about
 {
-    margin-top: 300px;
+    margin-top: 100px;
     font-family: 'Montserrat', sans-serif;
 	color:#dea5a4;
      text-align: center;
@@ -20,7 +31,7 @@
 
 #work
 {
-    margin-top: 300px;
+    margin-top: 100px;
     font-family: 'Montserrat', sans-serif;
 	color:#dea5a4;
      text-align: left;
@@ -128,7 +139,7 @@ p.about{
 
 #projects
 {
-    margin-top: 300px;
+    margin-top: 100px;
     font-family: 'Montserrat', sans-serif;
 	color:#dea5a4;
      text-align: center;
@@ -148,7 +159,7 @@ p.about{
 /* Slides */
 .mySlides {
   display: none;
-  padding: 60px;
+  /* padding: 60px; */
   text-align: center;
 }
 
@@ -246,7 +257,6 @@ p.about{
 .icons{
     text-align: center;
 	font-size: 2.5rem;
-	margin-left: 65px;
 }
 
 .icon{
@@ -261,7 +271,7 @@ p.about{
 
 #contact
 {
-    margin-top: 300px;
+    margin-top: 100px;
     font-family: 'Montserrat', sans-serif;
 	color:#dea5a4;
      text-align: left;
